Add link to @mriech at KWB

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 authors:
   Mathias Riechel:
-    href: ~
+    href: https://www.kompetenz-wasser.de/en/ueber-uns/team-2/?search-employee-grid=Mathias%20Riechel
   DWC:
     href: https://www.kompetenz-wasser.de/en/project/dwc/
     html: <img src='https://www.kompetenz-wasser.de/wp-content/uploads/2019/09/dwc-rvb-grey-516x244.jpg'
