--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(load_renamings_csv)
 export(load_renamings_excel)
 export(read_ms_access)
 export(read_select_rename)
+importFrom(magrittr,"%>%")
 importFrom(magrittr,'%>%')
 importFrom(rlang,.data)
 importFrom(stats,setNames)
