--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(load_renamings_excel)
 export(read_ms_access)
 export(read_select_rename)
 export(rename_values)
+export(replace_NAs_in_factor_var)
+export(replace_NAs_in_factor_vars)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(stats,setNames)
