adaptations, new code, new functions, renamings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,17 @@
 
 export("%>%")
 export(extdata_file)
+export(frequency_table)
 export(load_renamings_csv)
 export(load_renamings_excel)
+export(plot_distribution)
+export(plot_frequencies)
 export(read_ms_access)
 export(read_select_rename)
 export(rename_values)
 export(replace_NAs_in_factor_var)
 export(replace_NAs_in_factor_vars)
+export(summarise_marginal_factor_levels)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(stats,setNames)
