--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ BugReports: https://github.com/KWB-R/dwc.wells/issues
 Imports:
     dplyr,
     forcats,
+    kwb.db,
     magrittr,
     odbc32,
     readxl,
@@ -29,7 +30,7 @@ Imports:
     scales,
     tidyr
 Remotes:
-    github::vh-d/odbc32,
+    github::kwb-r/kwb.db@dev,
     github::kwb-r/kwb.utils,
     github::kwb-r/sema.berlin.utils
 Encoding: UTF-8
