Add translation for "inbetriebnahme" (#5)
for details see: https://github.com/KWB-R/dwc.wells/issues/5#issuecomment-832114183

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     readxl,
     rlang,
     scales,
-    tidyr
+    tidyr,
+    tidyselect
 Remotes:
     github::kwb-r/kwb.db@dev,
     github::kwb-r/kwb.utils,
