change to english names and script cleaning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,8 @@ export(plot_frequencies)
 export(read_ms_access)
 export(read_select_rename)
 export(rename_values)
-export(replace_NAs_in_factor_var)
-export(replace_NAs_in_factor_vars)
 export(summarise_marginal_factor_levels)
+export(tidy_factor)
 importFrom(kwb.db,hsGetTable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
