Fix Rcmdcheck warning by exporting "my_theme"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(tidy_factor)
 importFrom(kwb.db,hsGetTable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(sema.berlin.utils,my_theme)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
