--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,4 @@ importFrom(rlang,.data)
 importFrom(sema.berlin.utils,my_theme)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
+importFrom(utils,write.table)
