Fix remaining stuff...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(frequency_table)
 export(interpolate_and_fill)
 export(load_renamings_csv)
 export(load_renamings_excel)
+export(plot_Qs_over_time)
 export(plot_distribution)
 export(plot_frequencies)
 export(read_csv)
@@ -16,10 +17,17 @@ export(rename_values)
 export(select_rename_cols)
 export(summarise_marginal_factor_levels)
 export(tidy_factor)
+import(ggplot2)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(kwb.db,hsGetTable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(scales,percent)
+importFrom(scales,pretty_breaks)
+importFrom(scales,rescale_none)
 importFrom(sema.berlin.utils,my_theme)
+importFrom(stats,approx)
 importFrom(stats,setNames)
+importFrom(tidyselect,all_of)
 importFrom(utils,read.csv)
 importFrom(utils,write.table)
