--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,9 +22,11 @@ BugReports: https://github.com/KWB-R/dwc.wells/issues
 Imports:
     dplyr,
     forcats,
+    ggplot2,
     kwb.db,
     magrittr,
     odbc32,
+    RColorBrewer,
     readxl,
     rlang,
     scales,
@@ -41,7 +43,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
     covr,
-    ggplot2,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
