--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,11 @@ Imports:
     dplyr,
     forcats,
     kwb.db,
+    lubridate,
     magrittr,
     odbc32,
     readxl,
+    RColorBrewer,
     rlang,
     scales,
     sema.berlin.utils,
