--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(correlation_plot)
 export(extdata_file)
+export(fill_up_na_with_median)
 export(frequency_table)
 export(interpolate_and_fill)
 export(load_renamings_csv)
@@ -13,6 +14,7 @@ export(read_csv)
 export(read_ms_access)
 export(read_select_rename)
 export(rename_values)
+export(save_data)
 export(select_rename_cols)
 export(summarise_marginal_factor_levels)
 export(tidy_factor)
