--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(correlation_plot)
 export(extdata_file)
 export(fill_up_na_with_median)
 export(frequency_table)
+export(interpolate_Qs)
 export(interpolate_and_fill)
 export(load_renamings_csv)
 export(load_renamings_excel)
