--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,11 @@ Authors@R:
              role = c("aut", "cre"),
              email = "mathias.riechel@kompetenz-wasser.de",
              comment = c(ORCID = "0000-0002-1191-5877")),
+      person(given = "Michael",
+             family = "Rustler",
+             role = "ctb",
+             email = "michael.rustler@kompetenz-wasser.de",
+             comment = c(ORCID = "0000-0003-0647-7726")),
       person(given = "DWC",
              role = "fnd"),
       person(given = "Kompetenzzentrum Wasser Berlin gGmbH (KWB)",
