--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,8 @@
 authors:
   Mathias Riechel:
     href: https://www.kompetenz-wasser.de/en/ueber-uns/team-2/?search-employee-grid=Mathias%20Riechel
+  Michael RUstler:
+    href: https://mrustl.de
   DWC:
     href: https://www.kompetenz-wasser.de/en/project/dwc/
     html: <img src='https://www.kompetenz-wasser.de/wp-content/uploads/2019/09/dwc-rvb-grey-516x244.jpg'
