--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export("%>%")
 export(correlation_plot)
 export(extdata_file)
-export(fill_up_na_with_median)
+export(fill_up_na_with_median_from_lookup)
 export(frequency_table)
 export(interpolate_Qs)
 export(interpolate_and_fill)
@@ -15,6 +15,7 @@ export(read_csv)
 export(read_ms_access)
 export(read_select_rename)
 export(rename_values)
+export(replace_na_with_median)
 export(save_data)
 export(select_rename_cols)
 export(summarise_marginal_factor_levels)
