--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,7 @@ Suggests:
 VignetteBuilder: 
     knitr
 Remotes:
-    github::kwb-r/kwb.db@dev,
+    github::kwb-r/kwb.db,
     github::kwb-r/kwb.utils,
     github::kwb-r/sema.berlin.utils
 Encoding: UTF-8
