--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(read_select_rename)
 export(rename_values)
 export(replace_na_with_median)
 export(save_data)
+export(scatterplot)
 export(select_rename_cols)
 export(summarise_marginal_factor_levels)
 export(tidy_factor)
