adapt data preparation functions:
- give path and renamings as arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(load_renamings_excel)
 export(paste_percent)
 export(plot_distribution)
 export(plot_frequencies)
+export(prepare_pump_test_data)
+export(prepare_pump_test_data_1)
+export(prepare_pump_test_data_2)
 export(read_csv)
 export(read_ms_access)
 export(read_select_rename)
