Add pkg dependencies used in extdata/scripts
as "Suggests", as this part will be later moved to "Vignettes"

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,10 +43,20 @@ Imports:
     tidyselect,
     zoo
 Suggests: 
+    caret,
+    cowplot,
     covr,
+    doParallel,
     ggplot2,
     knitr,
-    rmarkdown
+    parallel,
+    plotly,
+    randomForest,
+    rpart.plot,
+    rmarkdown,
+    tidymodels,
+    usethis,
+    xgboost
 VignetteBuilder: 
     knitr
 Remotes:
