Fix one Rcmdcheck note by importing functions
median/sd from "stats" package and also "dummy" roxygenise two data preparation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(plot_frequencies)
 export(prepare_pump_test_data)
 export(prepare_pump_test_data_1)
 export(prepare_pump_test_data_2)
+export(prepare_quality_data)
+export(prepare_volume_data)
 export(read_csv)
 export(read_ms_access)
 export(read_select_rename)
@@ -40,6 +42,8 @@ importFrom(rlang,.data)
 importFrom(sema.berlin.utils,my_theme)
 importFrom(stats,approx)
 importFrom(stats,chisq.test)
+importFrom(stats,median)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
 importFrom(utils,write.table)
