Fix links and move "maintainer" role to myself

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,12 @@ Version: 0.1.0
 Authors@R: 
     c(person(given = "Mathias",
              family = "Riechel",
-             role = c("aut", "cre"),
+             role = "aut",
              email = "mathias.riechel@kompetenz-wasser.de",
              comment = c(ORCID = "0000-0002-1191-5877")),
       person(given = "Michael",
              family = "Rustler",
-             role = "ctb",
+             role = c("ctb", "cre"),
              email = "michael.rustler@kompetenz-wasser.de",
              comment = c(ORCID = "0000-0003-0647-7726")),
       person(given = "DWC",
