--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,11 +1,11 @@
 authors:
   Mathias Riechel:
-    href: https://www.kompetenz-wasser.de/en/ueber-uns/team-2/?search-employee-grid=Mathias%20Riechel
-  Michael RUstler:
+    href: https://github.com/mriech
+  Michael Rustler:
     href: https://mrustl.de
   DWC:
-    href: https://www.kompetenz-wasser.de/en/project/dwc/
-    html: <img src='https://www.kompetenz-wasser.de/wp-content/uploads/2019/09/dwc-rvb-grey-516x244.jpg'
+    href: https://www.kompetenz-wasser.de/en/forschung/projekte/dwc
+    html: <img src='www.kompetenz-wasser.de/media/pages/forschung/projekte/dwc/6263c55e76-1639132760/dwc-rvb-grey.jpg'
       height='24' />
   Kompetenzzentrum Wasser Berlin gGmbH (KWB):
     href: https://www.kompetenz-wasser.de
