--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,11 +5,11 @@ authors:
     href: https://mrustl.de
   DWC:
     href: https://www.kompetenz-wasser.de/en/forschung/projekte/dwc
-    html: <img src='www.kompetenz-wasser.de/media/pages/forschung/projekte/dwc/6263c55e76-1639132760/dwc-rvb-grey.jpg'
+    html: <img src='https://kompetenz-wasser.de/media/pages/forschung/projekte/dwc/6263c55e76-1639132760/dwc-rvb-grey.jpg'
       height='24' />
   Kompetenzzentrum Wasser Berlin gGmbH (KWB):
     href: https://www.kompetenz-wasser.de
-    html: <img src='https://www.kompetenz-wasser.de/wp-content/uploads/2017/08/cropped-logo-kwb_klein-new.png'
+    html: <img src='https://publications.kompetenz-wasser.de/img/KWB-Logo.svg'
       height='24' />
 template:
   params:
