--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,9 +11,17 @@ authors:
     href: https://www.kompetenz-wasser.de
     html: <img src='https://publications.kompetenz-wasser.de/img/KWB-Logo.svg'
       alt='KWB' width='72' />
+
 template:
-  params:
-    bootswatch: cerulean
+  bootstrap: 5
+  bootswatch: cerulean
+  bslib:
+    bg: "#ffffff"
+    fg: "#000000"
+    primary: "#007aff"
+    border-radius: 0.5rem
+    btn-border-radius: 0.25rem
+
 development:
   mode: auto
 
