--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(scatterplot)
 export(select_rename_cols)
 export(summarise_marginal_factor_levels)
 export(tidy_factor)
+import(ggplot2)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(graphics,par)
@@ -47,3 +48,5 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
 importFrom(utils,write.table)
+importFrom(yardstick,rmse)
+importFrom(yardstick,rsq)
