fix Rcmdcheck notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,12 +34,16 @@ Imports:
     lubridate,
     magrittr,
     odbc32,
+    parsnip,
     RColorBrewer,
+    readr,
     readxl,
     rlang,
+    rsample,
     scales,
     sema.berlin.utils,
     stringr,
+    tibble,
     tidyr,
     tidyselect,
     yardstick,
