--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export("%>%")
 export(Qs_heatmap_plot)
 export(chi2.CramersV.test)
 export(classify_Qs)
+export(combine_pump_test_and_Q_monitoring_data)
 export(correlation_plot)
 export(extdata_file)
 export(fill_up_na_with_median_from_lookup)
 export(frequency_table)
 export(get_W_static_data)
+export(get_pump_test_vars)
 export(interpolate_Qs)
 export(interpolate_and_fill)
 export(load_renamings_csv)
@@ -32,6 +34,20 @@ export(select_rename_cols)
 export(summarise_marginal_factor_levels)
 export(tidy_factor)
 import(ggplot2)
+import(parsnip)
+import(rsample)
+import(tibble)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct_at)
+importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
+importFrom(forcats,fct_lump_prop)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(graphics,par)
@@ -39,6 +55,8 @@ importFrom(graphics,plot.new)
 importFrom(graphics,title)
 importFrom(kwb.db,hsGetTable)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_csv)
+importFrom(readxl,read_excel)
 importFrom(rlang,.data)
 importFrom(sema.berlin.utils,my_theme)
 importFrom(stats,approx)
@@ -46,7 +64,14 @@ importFrom(stats,chisq.test)
 importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(tidyselect,all_of)
+importFrom(tidyselect,matches)
+importFrom(tidyselect,starts_with)
 importFrom(utils,read.csv)
 importFrom(utils,write.table)
 importFrom(yardstick,rmse)
 importFrom(yardstick,rsq)
+importFrom(zoo,na.approx)
