xgboost: start adding "do nothing" simulation
to vignette and add two helper datasets ("operational_start" and "rehabs") for it.

In addition start writting functions for this modelling workflow!

data-raw/prepare_model_data.R improved to more easily switch between (un)anomynised datasets and also removed intermediate data outputs on local drive

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dwc.wells
 Title: A Package for Condition Predictions for Drinking Water Wells
-Version: 0.2.0
+Version: 0.2.0.9000
 Authors@R: c(
     person("Mathias", "Riechel", , "mathias.riechel@kompetenz-wasser.de", role = "aut",
            comment = c(ORCID = "0000-0002-1191-5877")),
@@ -22,6 +22,7 @@ Imports:
     corrplot,
     dplyr,
     forcats,
+    ggforce,
     ggplot2,
     kwb.db,
     kwb.utils,
@@ -51,6 +52,7 @@ Suggests:
     knitr,
     parallel,
     plotly,
+    purrr,
     randomForest,
     rmarkdown,
     rpart.plot,
