--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(extdata_file)
 export(fill_up_na_with_median_from_lookup)
 export(frequency_table)
 export(get_W_static_data)
+export(get_predictions)
 export(get_pump_test_vars)
 export(interpolate_Qs)
 export(interpolate_and_fill)
@@ -18,10 +19,12 @@ export(load_renamings_excel)
 export(paste_percent)
 export(plot_distribution)
 export(plot_frequencies)
+export(plot_predictions_points_per_well)
 export(prepare_pump_test_data)
 export(prepare_pump_test_data_1)
 export(prepare_pump_test_data_2)
 export(prepare_quality_data)
+export(prepare_simulation_donothing_df)
 export(prepare_volume_data)
 export(read_csv)
 export(read_ms_access)
@@ -39,11 +42,16 @@ import(rsample)
 import(tibble)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct_at)
 importFrom(dplyr,filter)
+importFrom(dplyr,first)
 importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,na_if)
 importFrom(dplyr,rename)
@@ -51,6 +59,14 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(forcats,fct_lump_prop)
+importFrom(ggforce,facet_wrap_paginate)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_discrete)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme_bw)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(graphics,par)
@@ -58,6 +74,10 @@ importFrom(graphics,plot.new)
 importFrom(graphics,title)
 importFrom(kwb.db,hsGetTable)
 importFrom(kwb.utils,allAreIdentical)
+importFrom(kwb.utils,catAndRun)
+importFrom(lubridate,"%m+%")
+importFrom(lubridate,time_length)
+importFrom(lubridate,years)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_excel)
 importFrom(rlang,.data)
@@ -65,13 +85,17 @@ importFrom(sema.berlin.utils,my_theme)
 importFrom(stats,approx)
 importFrom(stats,chisq.test)
 importFrom(stats,median)
+importFrom(stats,predict)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,expand)
+importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,starts_with)
 importFrom(tidyselect,all_of)
+importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
 importFrom(tidyselect,starts_with)
 importFrom(utils,read.csv)
