ML-modelling: resample_dataset()
new function added for simplifying ML-workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(read_ms_access)
 export(read_select_rename)
 export(rename_values)
 export(replace_na_with_median)
+export(resample_dataset)
 export(save_data)
 export(scatterplot)
 export(select_rename_cols)
@@ -81,6 +82,9 @@ importFrom(lubridate,years)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_excel)
 importFrom(rlang,.data)
+importFrom(rsample,initial_split)
+importFrom(rsample,testing)
+importFrom(rsample,training)
 importFrom(sema.berlin.utils,my_theme)
 importFrom(stats,approx)
 importFrom(stats,chisq.test)
@@ -88,6 +92,7 @@ importFrom(stats,median)
 importFrom(stats,predict)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(tibble,as_tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,expand)
 importFrom(tidyr,fill)
